todo fix tests